<resources>
    <string name="app_name">SebalaMakgolo</string>
    <string name="start">Start</string>
    <string name="back">←</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="div">\u00F7</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="b0">0</string>
    <string name="plus_minus">±</string>
    <string name="close">OFF</string>
    <string name="multiply">*</string>
    <string name="inv">inv</string>
    <string name="mod">%</string>
    <string name="e_x">e^x</string>
    <string name="open">(</string>
    <string name="closeb">)</string>
    <string name="sin">sin</string>
    <string name="mc">m-</string>
    <string name="log">log</string>
    <string name="m">m</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="mr">m+</string>
    <string name="x_2">x^2</string>
    <string name="x_3">x^3</string>
    <string name="x_y">x^y</string>
    <string name="_10_x">10^x</string>
    <string name="_1_x">1/X</string>
    <string name="sqrt">√</string>
    <string name="y_x">y√x</string>
    <string name="negate">±</string>
    <string name="sebala">SEBALA</string>
    <string name="makgolo">MAKGOLO</string>
</resources>
