<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="35sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/back"
            android:textSize="25sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/clear"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/plus"
            android:textSize="25sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/minus"
            android:textSize="25sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b7"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b8"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b9"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/multiply"
            android:textSize="25sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b4"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b6"
            android:textSize="25sp" />

        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/div"
            android:textSize="25sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/equal"
            android:textSize="25sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/dot"
            android:textSize="25sp" />

        <Button
            android:id="@+id/b0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/b0"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plus_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/plus_minus"
            android:textSize="25sp" />

        <Button
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="#BF88CF35"
            android:text="@string/close"
            android:textSize="25sp" />
    </TableRow>

</TableLayout>