<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/input_backg_color"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="none"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/input_backg_color"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/inverse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/inv"
                android:textOff="@string/inv"
                android:textOn="@string/inv"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/e_raisedto_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/e_x"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/clear"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/butbra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/open"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
            <Button
                android:id="@+id/butbraClose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/closeb"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/mod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/mod"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/div"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/m"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/sin"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/cos"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/tan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/tan"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/multiply"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mrecall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/mc"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/e"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/e"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ln"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/ln"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/log"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/minus"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mstore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/mr"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/x_2"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/x_3"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/powY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/x_y"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/plus"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tenPowX"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/_10_x"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/sqrt"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/yrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/y_x"
                android:textAllCaps="false"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/oneX"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oper_button"
                android:text="@string/_1_x"
                android:textColor="@color/oper_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/dot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/b0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numbers_button"
                android:text="@string/negate"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/equl_button"
                android:text="@string/equal"
                android:textColor="@color/equl_text_color"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
